Complete the adding boot and showing book component work
