# book-service-uif/src/openapi/openapi.json
@@ -107,7 +107,7 @@
                 "tags": [
                     "Book"
                 ],
-                "operationId": "save",
+                "operationId": "saveBook",
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -289,14 +289,6 @@
                             "type": "integer",
                             "format": "int32"
                         }
-                    },
-                    {
-                        "name": "shareable",
-                        "in": "query",
-                        "required": true,
-                        "schema": {
-                            "type": "boolean"
-                        }
                     }
                 ],
                 "responses": {
@@ -393,14 +385,6 @@
                             "type": "integer",
                             "format": "int32"
                         }
-                    },
-                    {
-                        "name": "archived",
-                        "in": "query",
-                        "required": true,
-                        "schema": {
-                            "type": "boolean"
-                        }
                     }
                 ],
                 "responses": {
@@ -469,6 +453,79 @@
                 }
             }
         },
+        "/books/{book-id}": {
+            "get": {
+                "tags": [
+                    "Book"
+                ],
+                "operationId": "findBookById",
+                "parameters": [
+                    {
+                        "name": "book-id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int32"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/BookResponse"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/books/returned": {
+            "get": {
+                "tags": [
+                    "Book"
+                ],
+                "operationId": "findAllReturnedBooks",
+                "parameters": [
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int32",
+                            "default": 0
+                        }
+                    },
+                    {
+                        "name": "size",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int32",
+                            "default": 10
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/PageResponseBorrowedBookResponse"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/books/owner": {
             "get": {
                 "tags": [
@@ -504,6 +561,48 @@
                             "application/json": {
                                 "schema": {
                                     "$ref": "#/components/schemas/PageResponseBookResponse"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/books/borrowed": {
+            "get": {
+                "tags": [
+                    "Book"
+                ],
+                "operationId": "findAllBorrowedBooks",
+                "parameters": [
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int32",
+                            "default": 0
+                        }
+                    },
+                    {
+                        "name": "size",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int32",
+                            "default": 10
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/PageResponseBorrowedBookResponse"
                                 }
                             }
                         }
@@ -735,6 +834,67 @@
                         "type": "array",
                         "items": {
                             "$ref": "#/components/schemas/BookResponse"
+                        }
+                    },
+                    "number": {
+                        "type": "integer",
+                        "format": "int32"
+                    },
+                    "size": {
+                        "type": "integer",
+                        "format": "int32"
+                    },
+                    "totalElements": {
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    "totalPages": {
+                        "type": "integer",
+                        "format": "int32"
+                    },
+                    "first": {
+                        "type": "boolean"
+                    },
+                    "last": {
+                        "type": "boolean"
+                    }
+                }
+            },
+            "BorrowedBookResponse": {
+                "type": "object",
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "format": "int32"
+                    },
+                    "title": {
+                        "type": "string"
+                    },
+                    "authorName": {
+                        "type": "string"
+                    },
+                    "isbn": {
+                        "type": "string"
+                    },
+                    "rate": {
+                        "type": "number",
+                        "format": "double"
+                    },
+                    "returned": {
+                        "type": "boolean"
+                    },
+                    "returnApproved": {
+                        "type": "boolean"
+                    }
+                }
+            },
+            "PageResponseBorrowedBookResponse": {
+                "type": "object",
+                "properties": {
+                    "content": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/BorrowedBookResponse"
                         }
                     },
                     "number": {
